refactor(chat): 예외 처리 코드 분리 및 컨트롤러와 서비스 리펙토링
- ChatGlobalExceptionHandler : ChatRoomController에서 예외 처리 부분 분리함
- ChatRoomController, ChatRoomService : 서비스 계층에서 직접 ChatApiResponse 반환하도록 리팩토링

#6